# CrewAI-Agents

./: README.md
autocoder/: README.md  pyproject.toml
autocoder/src/autocoder/: crew.py  main.py
autocoder/src/autocoder/config/: agents.yaml  tasks.yaml
