[project]
name = "autocoder"
version = "0.1.0"
description = "AutoCoder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
autocoder = "autocoder.main:run"
run_crew = "autocoder.main:run"
train = "autocoder.main:train"
replay = "autocoder.main:replay"
test = "autocoder.main:test"
run_with_trigger = "autocoder.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
